src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Valid/Simple/ValidSimple.php
<?php

namespace Valid\Simple;

use Claroline\CoreBundle\Library\Plugin\ClarolineExtension;

class ValidSimple extends ClarolineExtension
{
}